Add payment tracking